# NativeLauncher

./: .gitignore  build.gradle  build.sh  install-android-sdk.sh  main.cpp  scriptCopy.sh  settings.gradle  setup-android.sh
.github/workflows/: build.yaml  build.yml
app/: TextActivity.java  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/com/nativelauncher/app/: MainActivity.java
app/src/main/res/values/: strings.xml
